# pdf_chapter_splitter

./: .gitignore  README.md  analyze_context.py  claude-yoro.py  debug.py  final_improved_splitter.py  improved_splitter.py  pyproject.toml
scripts/: analyze_patterns.py  debug_detection.py  find_missing_chapters.py
src/pdf_chapter_splitter/: __init__.py  cli.py  splitter.py
tests/: test_splitter.py
